--- a/mercado/templates/base.html
+++ b/mercado/templates/base.html
@@ -6,20 +6,25 @@
     <meta charset="UTF-8">
     <title>{% block title %}Mercadito{% endblock %}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="{% load static %}{% static 'css/style.css' %}"> <!-- 👈 Nueva línea -->
+    <link rel="stylesheet" href="{% load static %}{% static 'css/style.css' %}">
     {% block extra_css %}{% endblock %}
 </head>
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
-            <a class="navbar-brand" href="{% url 'products:list' %}">Mercadito</a>
+            <a class="navbar-brand" href="{% url 'products:home' %}">Mercadoo</a>
             <div class="navbar-nav ms-auto">
                 {% if user.is_authenticated %}
-                <a class="nav-link" href="{% url 'products:create' %}">Crear Producto</a>
-                <a class="nav-link" href="{% url 'users:logout' %}">Salir ({{ user.username }})</a>
+                    <a class="nav-link" href="{% url 'products:create' %}">Crear</a>
+                    <a class="nav-link" href="{% url 'products:compare' %}">Comparar</a>
+                    <form class="d-inline" method="post" action="{% url 'users:logout' %}">
+                        {% csrf_token %}
+                        <button type="submit" class="nav-link">Salir ({{ user.username }})</button>
+                    </form>
                 {% else %}
-                <a class="nav-link" href="{% url 'users:login' %}">Entrar</a>
+                    <a class="nav-link" href="{% url 'users:login' %}">Entrar</a>
+                    <a class="nav-link" href="{% url 'users:signup' %}">Registrarse</a>
                 {% endif %}
             </div>
         </div>
