--- a/mercado/users/templates/users/signup.html
+++ b/mercado/users/templates/users/signup.html
@@ -1,15 +1,53 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Registro</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Iniciar Sesion</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body>
-    <h2>Registro</h2>
-    <form method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Registrarse</button>
-    </form>
-    <a href="{% url 'users:login' %}">¿Ya tienes cuenta? Inicia sesión aquí</a>
+<body class="d-flex align-items-center py-4 bg-body-tertiary">
+    <main class="form-signin w-50 m-auto">
+        <div class="card shadow-lg">
+            <div class="card-body p-5">
+                <h2 class="text-center mb-4">Registrate</h2>
+                <form method="post">
+                    {% csrf_token %}
+                    <div class="form-floating mb-3">
+                        <input type="text" class="form-control" id="id_username" name="username" placeholder="Nombre de Usuario" required>
+                        <label for="id_username">Nombre de Usuario</label>
+                    </div>
+                    <div class="form-floating mb-3">
+                        <input type="email" class="form-control" id="id_email" name="email" placeholder="Email" required>
+                        <label for="id_email">Email</label>
+                    </div>
+                    <div class="form-floating mb-3">
+                        <input type="password" class="form-control" id="id_password1" name="password1" placeholder="Contraseña" required>
+                        <label for="id_password1">Contraseña</label>
+                    </div>
+                    <div class="form-floating mb-3">
+                        <input type="password" class="form-control" id="id_password2" name="password2" placeholder="Repetir Contraseña" required>
+                        <label for="id_password2">Repetir Contraseña</label>
+                    </div>
+                    
+                    <button type="submit" class="btn btn-primary w-100 py-2">Registrarme</button>
+                
+                    {% if messages %}
+                    <div class="alert alert-info">
+                        {% for message in messages %}
+                            <div{% if message.tags %} class="alert alert-{{ message.tags }}"{% endif %}>
+                                {{ message }}
+                            </div>
+                        {% endfor %}
+                    </div>
+                    {% endif %}
+                </form>
+
+                <div class="text-center mt-3">
+                    <small>¿Ya tienes cuenta? <a href="{% url 'users:login' %}">Inicia sesión aquí</a></small>
+                </div>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
