--- a/mercado/products/templates/products/home.html
+++ b/mercado/products/templates/products/home.html
@@ -25,11 +25,12 @@
                         <p class="card-text">{{ product.description|truncatewords:10 }}</p>
                         <p class="card-text"><strong>${{ product.price }}</strong></p>
                         <p class="text-muted">Por: {{ product.user.username }}</p>
+                        {% if user.is_authenticated %}
+                            <a href="{% url 'products:add_to_cart' product.id %}" class="btn btn-success">Agregar al carrito</a>
+                        {% endif %}
                     </div>
                 </div>
             </div>
-        {% empty %}
-            <p>No hay productos uwu</p>
         {% endfor %}
     </div>
 
