--- a/mercado/users/templates/users/login.html
+++ b/mercado/users/templates/users/login.html
@@ -24,7 +24,7 @@
     <main class="form-signin w-100 m-auto" style="max-width: 400px;">
         <div class="card shadow-lg">
             <div class="card-body p-4">
-                <h2 class="text-center mb-4">Iniciar Sesion</h2>
+                <h2 class="text-center mb-4">Iniciar Sesión</h2>
                 <form method="post">
                     {% csrf_token %}
                     <div class="form-floating mb-3">
