agrego el requirements

--- a/mercado/products/templates/products/home.html
+++ b/mercado/products/templates/products/home.html
@@ -4,8 +4,8 @@
 
 {% block content %}
     <div class="jumbotron bg-primary text-white p-5 rounded">
-        <h1 class="display-4">Bienvenido al mercado de algo</h1>
-        <p class="lead">Preparate para encontrar los mejores productos de lo que se te ocurra</p>
+        <h1 class="display-4">Bienvenido al mercado de Michis</h1>
+        <p class="lead">Busca, compra y vende los michis que quieras!!</p>
     </div>
 
     <h2 class="mt-5">Los ultimos Productos</h2>
