--- a/mercado/products/templates/products/compare.html
+++ b/mercado/products/templates/products/compare.html
@@ -46,5 +46,6 @@
 {% endblock %}
 
 {% block extra_js %}
-        <script src="{% static 'js/compare.js' %}"></script>
+    {{ block.super }}
+    <script src="{% static 'js/compare.js' %}"></script>
 {% endblock %}
