--- a/mercado/users/templates/users/signup.html
+++ b/mercado/users/templates/users/signup.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Iniciar Sesion</title>
+    <title>Registrarme - Michi Mercado</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
 
     <style>
         .social-login {
@@ -29,7 +30,7 @@
                     <div class="form-floating mb-3">
                         <input type="text" class="form-control" id="id_username" name="username"
                             placeholder="Nombre de Usuario" required>
-                        <label for="id_username">Nombre de Usuario</label>
+                        <label for="id_username">Usuario</label>
                     </div>
                     <div class="form-floating mb-3">
                         <input type="email" class="form-control" id="id_email" name="email" placeholder="Email"
@@ -50,10 +51,10 @@
                     <small>O registrate con ...</small>
                     <div class="social-login mt-3">
                         <a href="{% url 'google_login' %}" class="btn btn-danger w-20 mb-2">
-                            <i class="fab fa-google me-2"></i> Google
+                            <i class="bi bi-google"></i>
                         </a>
                         <a href="{% url 'github_login' %}" class="btn btn-dark w-20 mb-2">
-                            <i class="fab fa-github me-2"></i> GitHub
+                            <i class="bi bi-github"></i>
                         </a>
                     </div>
 
